--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -1,6 +1,10 @@
 * {
     color: white;
 }
+.reportsLink {
+    opacity: 1;
+    width: 100%;
+}
 #deleteReport{
     position: absolute;
     top: 20px;
