--- a/reports_app/templates/reports.html
+++ b/reports_app/templates/reports.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="{{ url_for('reports_app.static', filename= 'css/reports.css') }}">
 {% endblock %}
 
+{% block name_page %}
+Звіти вікторин
+{% endblock %}
+
 {% block content %}
     <div class="main">
-        <header>
-            <h2>Звіти вікторин</h2>
-        </header>
         <div class="summary-conteiner">
             <div class="reports-main">
                 <div class="reports-info">
