--- a/history_app/templates/history.html
+++ b/history_app/templates/history.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="{{url_for('history_app.static', filename= 'css/history.css') }}">
 {% endblock %}
 
+{% block name_page %}
+Пройдено мною
+{% endblock %}
+
 {% block content %}
-    <header>
-        <h2>Пройдено мною</h2>
-    </header>
     <div class="passed-quizes">
 
         {% for participiant in participiants %}
