--- a/host_app/templates/previewQuiz.html
+++ b/host_app/templates/previewQuiz.html
@@ -9,23 +9,30 @@ host
 {% endblock %}
 
 {% block content %}
-    <div class="main-info">
-        <img src="{{ url_for('library_app.static', filename=quiz.image) }}" class="ImgQuiz" alt="">
-        <h1>Назва: {{ quiz.name }}</h1>
-        <p>Опис: {{ quiz.description }}</p>
-        <h2>Кількість запитань: {{ quiz.count_questions }}</h2>
-        <h2>Автор: {{ quiz.user.surname }} {{ quiz.user.name }}</h2>
-        <form method="post">
-            <button id="submit-btn" type="submit" name="btn" value="host">Задати на виконання</button>
-            {% if code != 000000 %}
-                <h2 id="generated-code">Сгенерований код: {{ code }}</h2>
-            {% endif %}
-        </form>
-        {% if user.id == quiz.author_id %}
+    <div class="quiz">
+        <div class="info-quiz">
+            <img src="{{ url_for('library_app.static', filename=quiz.image) }}" class="ImgQuiz" alt="">
+            <div class="text">
+                <div class="text-info">
+                    <h1>Назва: {{ quiz.name }}</h1>
+                    <p>Опис: {{ quiz.description }}</p>
+                </div>
+                <div>
+                    <h2>Кількість запитань: {{ quiz.count_questions }}</h2>
+                    <h2>Автор: {{ quiz.user.surname }} {{ quiz.user.name }}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="buttons">
             <form method="post">
-                <button type="submit" name="btn" value="delete" style="background-color: red;">Видалити вікторину</button>
+                <button id="submit-btn" type="submit" name="btn" value="host">Задати на виконання</button>
             </form>
-        {% endif %}
+            {% if user.id == quiz.author_id %}
+                <form method="post">
+                    <button type="submit" name="btn" value="delete" style="background-color: red;">Видалити вікторину</button>
+                </form>
+            {% endif %}
+        </div>
         
         <div class="questions">
             {% for question in quiz.questions %}
