--- a/library_app/static/css/create_quiz.css
+++ b/library_app/static/css/create_quiz.css
@@ -19,6 +19,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Inter;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
 }
 
 body {
@@ -102,9 +104,9 @@ main {
     color: white;
     border-radius: 10px;
     width: 20%;
-    height: 100vw;
-    max-height: 46vw;
-    padding: clamp(15px, 2.1vw, 100px);
+    min-height: 60vh;
+    max-height: 87vh;
+    padding: clamp(15px, 2vw, 100px);
     gap: 10px;
 }
 
@@ -113,10 +115,27 @@ main {
     font-size: 18px;
     font-weight: bold;
 }
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 20px;       
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
 .slides {
     display: flex;
     flex-direction: column;
-
+    overflow-y: auto;
     gap: 20px;
 }
 .AI-button {
@@ -282,8 +301,7 @@ form {
 .create-question {
     position: relative;
     width: 100%;
-    max-height: 60%;
-    height: 40%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     
