--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -78,10 +78,7 @@ h1{
     font-family: "inter";
     font-size: 26px;
 }
-aside form {
-    width: 100%;
-}
-aside form button{
+.createForm button{
     width: 100%;
     height: 50px;
     background-color: #22CE00;
@@ -92,8 +89,12 @@ aside form button{
     font-size: 20px;
     cursor: pointer;
     transition: all 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
 }
-aside button:hover {
+.createForm button:hover {
     background-color: #27ea00;
 }
 .links{
@@ -141,18 +142,31 @@ aside button:hover {
 .nav{
     width: 100%;
     height: 80px;
-    position: absolute;
+    position: fixed;
     right: 0;
     background-color: #333333;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding-right: 15px;
+    padding-left: 300px;
     gap: 20px;
     z-index: 4;
 }
-.nav a img{
+.secondNav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+}
+.firstNav h2 {
+    font-family: "Inter";
+    font-size: 22px;
+    color: white;
+}
+.secondNav a img{
     width: 90%;
     height: 100%;
 }
@@ -160,7 +174,7 @@ aside button:hover {
     height: 40px;
     width: 40px;
 }
-.nav a{
+.secondNav a{
     font-family: "Inter";
     font-size: 22px;
     color: white;
