--- a/reports_app/static/css/reports.css
+++ b/reports_app/static/css/reports.css
@@ -2,6 +2,10 @@
     font-family: 'Inter';
     color: white;
 }
+.reportsLink {
+    opacity: 1;
+    width: 100%;
+}
 header{
     position: relative;
     top: 80px;
