--- a/user_app/static/css/profile.css
+++ b/user_app/static/css/profile.css
@@ -1,12 +1,13 @@
 .profile {
+    width: calc(100% - 220px);
+    position: relative;
+    top: 80px;
+    left: 220px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
     align-items: center;
-    width: 100%;
-    height: 80%;
-    padding-top: 105px;
-    gap: 50px;
+    gap: 25px;
+    padding: 25px;
 }
 
 h2 {
@@ -23,7 +24,7 @@ h2 {
     align-items: start;
     width: 845px;
     background-color: #262626;
-    border-radius: 15px;
+    border-radius: 25px;
     padding: 38px 40px;
     gap: 55px;
 }
