--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -387,8 +387,8 @@
                     if (document.getElementById('waitingDiv')) {
                         document.getElementById('waitingDiv').remove();
                     }
-                    if (document.getElementById("WWblur").classList.contains('hideblur') === true) {
-                        document.getElementById("WWblur").classList.add('hideblur');
+                    if (document.getElementById("WWblur").classList.contains('hideblur')) {
+                        document.getElementById("WWblur").classList.remove('hideblur');
                     }
                     const allBtns = document.querySelectorAll('.answer-button, label');
                     
@@ -441,21 +441,23 @@
                         }
                     }
                     else if (data.type === 'multiple answers') {
-                        allBtns.forEach(btn => {
-                            const btnId = parseInt(btn.value);
-                            if (btnId !== data.answer_id && btnId !== data.correct_answer_id) {
-                                btn.style.opacity = 0; 
-                        }});
-                        const userAnswerBtns = data.answer_id.map(id => document.getElementById(`answerBtn${id}`));
-                        userAnswerBtns.forEach(btn => {
-                            btn.style.opacity = 1;
-                            btn.style.backgroundColor = btn.style.backgroundColor === 'green' ? 'green' : 'red';
-                        });
-                        const correctAnswerBtns = data.correct_answer_id.map(id => document.getElementById(`answerBtn${id}`));
-                        correctAnswerBtns.forEach(btn => {
-                            btn.style.opacity = 1;
-                            btn.style.backgroundColor = 'green';
-                        });
+                        if (data.answer_id !== "Пропущений...") {
+                            allBtns.forEach(btn => {
+                                const btnId = parseInt(btn.value);
+                                if (btnId !== data.answer_id && btnId !== data.correct_answer_id) {
+                                    btn.style.opacity = 0; 
+                            }});
+                            const userAnswerBtns = data.answer_id.map(id => document.getElementById(`answerBtn${id}`));
+                            userAnswerBtns.forEach(btn => {
+                                btn.style.opacity = 1;
+                                btn.style.backgroundColor = btn.style.backgroundColor === 'green' ? 'green' : 'red';
+                            });
+                            const correctAnswerBtns = data.correct_answer_id.map(id => document.getElementById(`answerBtn${id}`));
+                            correctAnswerBtns.forEach(btn => {
+                                btn.style.opacity = 1;
+                                btn.style.backgroundColor = 'green';
+                            });
+                        }
                     }
                 });
     
