--- a/reports_app/templates/reports.html
+++ b/reports_app/templates/reports.html
@@ -18,11 +18,10 @@
             <div class="reports-main">
                 <div class="reports-info">
                     <div class="titles">
-                        <div class="name-div">
-                            <h3>Код</h3>
-                            <h3>Ім'я</h3>
-                        </div>
-                        <div class="info-div">
+                        <div></div>
+                        <h3>Код</h3>
+                        <h3>Назва тесту</h3>
+                        <div class="titlessub">
                             <h3 id="successful">Успішність</h3>
                             <h3 id="passed">Пройшло</h3>
                             <h3 id="date">Дата</h3>
@@ -30,12 +29,10 @@
                     </div>
                     <div class="reports">
                         {% for room in rooms %}
-                            <a href="/report/{{ room.id }}" class="report">    
-                                <div class="titleRoom">
-                                    <img src="{{ url_for('library_app.static', filename=room.roomsQuiz.image) }}" alt="">
-                                    <h3 id="code">({{ room.redeem_codes[0].code_enter }})</h3>
-                                    <h3 id="name">{{ room.roomsQuiz.name }}</h3>
-                                </div>
+                            <a href="/report/{{ room.id }}" class="report">
+                                <img src="{{ url_for('library_app.static', filename=room.roomsQuiz.image) }}" alt="">
+                                <h3 id="code">({{ room.redeem_codes[0].code_enter }})</h3>
+                                <h3 id="name">{{ room.roomsQuiz.name }}</h3>
                                 <div class="infoRoom">
                                     <div id="rate">
                                         {{ room.success_rate }}%
