--- a/library_app/templates/library.html
+++ b/library_app/templates/library.html
@@ -14,8 +14,8 @@ Library
 
 {% block content %}
     <div class="library-container">
-        <div class = "created-by-me">
-            <h1>Давайте створемо вікторину!</h1>
+        <div class = "search">
+            <h2>Давайте створемо вікторину!</h2>
             <form class="search-line" id="searchForm">
                 <img src="{{ url_for('admin_app.static', filename= 'images/search.svg') }}">
                 <input type="text" id="searchInput" placeholder="Знайдіть будь-яку тему...">
